# pc-paralegal

./: .gitignore  CLAUDE.md  index.html  package.json  tailwind.config.js
agent-scripts/: director-pipeline.ts  draft-memo.ts  drafter-agent.ts  review-document.ts  reviewer-agent.ts
agent-scripts/shared/: classifier.ts  ollama-client.ts  paperclip-client.ts  prompts.ts
agent-scripts/skills/: contract-review.ts
paperclip/: COMPLETED.md  drizzle.config.ts  package.json
paperclip/src/: app.ts  auth.ts  db.ts  index.ts  migrate.ts  seed.ts
paperclip/src/schema/: COMPLETED.md  agent_memories.ts  agent_task_sessions.ts  agents.ts  companies.ts  company_memberships.ts  company_secret_versions.ts  company_secrets.ts  cost_events.ts  goals.ts  index.ts  invites.ts  issue_attachments.ts  issue_comments.ts  issue_read_states.ts  issues.ts  join_requests.ts  principal_permission_grants.ts  project_workspaces.ts  projects.ts  (+1 more)
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: director.rs  documents.rs  files.rs  llm.rs  mod.rs  paperclip.rs
src/components/: ChatInterface.tsx  DeliverableCard.tsx  DocumentViewer.tsx  FileDropZone.tsx  Markdown.tsx  Sidebar.tsx  StatusBar.tsx
src/lib/: auth.ts  ollama.ts  paperclip.ts  pipeline.ts  settings.ts  tauri.ts  theme.ts
src/pages/: Admin.tsx  Chat.tsx  Dashboard.tsx  Deliverables.tsx  Documents.tsx  Login.tsx  Matters.tsx  Onboarding.tsx  Settings.tsx  Upload.tsx
src/types/: index.ts
(+3 files in other folders)
