[package]
name = "pc-paralegal"
version = "0.1.0"
description = "Virtual Paralegal Desktop App"
authors = ["AI Skills Lab"]
edition = "2021"

[lib]
name = "pc_paralegal_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
notify = "7"
tauri-plugin-dialog = "2"
